# ZONO2

./: .gitignore  .gitmodules  AGENTS.md  AUDIT.md  CLAUDE.md  Flola(1).ipynb  MAY18_results.md  README.md  TACAS_ROADMAP.md  pivot.md  predictive_zonotope_reduction_project_start.md  pyproject.toml  q.sh
experiments/: paper_evaluation_v1.yaml  terminal_loss_paper_v1.yaml
paper/: CORL_2026_PROJECT_NOTES.md  related_work_foundation.md
paper/corl2026/: README.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper/corl2026/Zonotopes_at_CoRL/: example.aux  example.bbl  example.blg  example.fdb_latexmk  example.fls  example.out  example.tex  references.bib
science/: CORL_FRAMING.md  CORL_RUNBOOK.md  EXPERIMENT_READINESS.md  LEARNING_PIPELINE.md  PAPER_EVALUATION.md  PLAN_TOTAL_LOSS_CUMULATIVE_MPC.md  ROBOTICS_SCENARIO_SPIKE.md  RTLOLA_BINDING_NATIVE_REFERENCE_NOTES.md  RTLOLA_INTEGRATION_NOTES.md  RTLOLA_MPC_LOSS_INVESTIGATION.md  RTLOLA_REFACTOR_STAGED_PLAN.md  SCIENCE.md  TERMINAL_LOSS_PAPER_EVALUATION.md
science/deep-research-brief/: pzr-deep-research-brief.aux  pzr-deep-research-brief.fdb_latexmk  pzr-deep-research-brief.fls  pzr-deep-research-brief.out  pzr-deep-research-brief.tex
science/notes/: RTLola_binding_loss_eval_20260625.md  RTLola_learning_pipeline_audit.md  RTLola_mpc_cost_options.md  RTLola_scott_mpc_dominance_20260703.md
src/pzr/: __init__.py  artifact_io.py  cli.py
src/pzr/benchmarks/: __init__.py  robot.py  thermostat.py
src/pzr/control/: __init__.py  costs.py  policies.py
src/pzr/core/: __init__.py  certificates.py  (+1 more)
tests/: test_benchmark.py  test_benchmark_cli.py  test_cora_parity.py  test_corl_learning.py  test_corl_suite.py  test_costs.py  test_distillation.py  test_envs.py  test_experiment_suite.py  test_full_eval.py  test_imitation.py  test_input_prediction.py  test_integration.py  test_learning_artifacts.py  test_learning_cli.py  test_learning_dart.py  test_learning_data.py  test_learning_diagnostics.py  test_learning_evaluation.py  test_learning_exploration.py  test_learning_reporting.py  test_learning_traces.py  test_monitoring.py  test_monitoring_triggers.py  test_mpc.py  test_paper_evaluation.py  test_paper_figures.py  test_paper_reporting.py  test_paper_tables.py  test_policy_evaluation.py  test_policy_reporting.py  test_ranker.py  test_ranking.py  test_reducers.py  test_reduction.py  test_robot_arm.py  test_robot_arm_animation.py  test_robot_arm_random.py  test_robot_monitor.py  test_robotics_interventions.py  (+13 more)
tests/fixtures/: cora_reducers_reference.json
tools/: collect_f1tenth_trace.py  collect_safe_control_drone_trace.py  run_corl_calibration.sh  run_corl_firmware_replay_overnight.sh  run_corl_headline.sh  run_corl_level0_full_pipeline.sh  run_paper_evaluation.sh  run_pzr_icra_table_matrix.sh  run_pzr_paper_full.sh  run_pzr_paper_live_headline_overnight.sh  run_pzr_paper_static.sh  run_pzr_smoke_parallel.sh  run_rtlola_learning_exploration.sh  run_rtlola_learning_full.sh  run_rtlola_learning_mpc_addon.sh  run_rtlola_learning_paper.sh  run_rtlola_learning_primary.sh  run_rtlola_mpc_variant_study.sh  run_rtlola_mpc_vs_girard_quick.sh  run_rtlola_omni_fidelity_overnight.sh  run_rtlola_robot_arm.sh  run_rtlola_robot_arm_fpr_overnight.sh  run_terminal_loss_paper.sh  setup_f1tenth_sidecar.sh  setup_robot_arm_env.sh  setup_rtlola_binding.sh  validate_cora_reducers.py
(+132 files in other folders)
