[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-zonotope-reduction"
version = "0.2.0"
description = "Dynamic zonotope reduction for state estimation under uncertainty."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
learning = [
    "torch>=2.0",
]
sim = [
    "mujoco>=3.0",
    "safety-gymnasium>=1.0",
]
dev = [
    "pytest>=8",
]

[project.scripts]
pzr-benchmark = "pzr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
