[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-zonotope-reduction"
version = "0.2.0"
description = "Predictive reducer selection for RTLola zonotope monitors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "torch>=2.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
sim = [
    "mujoco>=3.0",
]
dev = [
    "pytest>=8",
]

[project.scripts]
pzr-benchmark = "pzr.rtlola.cli:main"
pzr-learning = "pzr.learning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pzr = [
    "rtlola/specs/*.lola",
    "rtlola/traces/robot_arm/*.csv",
    "envs/mujoco_models/low_cost_robot_arm/*.xml",
    "envs/mujoco_models/low_cost_robot_arm/*.md",
    "envs/mujoco_models/low_cost_robot_arm/LICENSE",
    "envs/mujoco_models/low_cost_robot_arm/NOTICE",
    "envs/mujoco_models/low_cost_robot_arm/*.png",
    "envs/mujoco_models/low_cost_robot_arm/assets/*.stl",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
